Improve OpenAPI documentation.
